[package]
name = "threes"
version = "0.1.0"
authors = ["Darrin Willis <WillisDarrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rustyline = "5.0.6"
termion = "1.5.4"
enum-map = "0.6.2"
rayon = "1.3.0"
histogram = "0.6.9"
