[package]
name = "threes"
version = "0.1.0"
authors = ["Darrin Willis <WillisDarrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.7.2"
rustyline = "5.0.6"
termion = "1.5.4"
enum-map = "0.6.2"
rayon = "1.3.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
histogram = "0.6.9"
itertools = "0.9.0"
pprof = { version = "0.3.16", features = ["flamegraph"] }
